# project_template

./: .environment.yml  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter.json  justfile  pyproject.toml
[project_name]/: run.py
[project_name]/configs/hydra/job_logging/: full.yaml
hooks/: post_gen_project.py
install/: just.sh
reports/big_presentation/: settings.sty  template.tex
reports/big_presentation/sections/: 2-overview.tex  3a-detail.tex  6-conclusion.tex
reports/small_presentation/: settings.sty  template.tex
submission/: meta_cluster_example.sh
utils/: activate  activate_environment  activate_just  activate_miniconda  activate_poetry  clean_experiments.sh  format.sh  install.sh  install_environment.sh  install_miniconda.sh  install_poetry.sh  install_pre-commit.sh  setup_environment.sh  uninstall.sh
{{cookiecutter.repository_name}}/: .gitignore  CONTRIBUTING.md  README.md  justfile  pyproject.toml
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: run.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/configs/: run.yaml  run_slurm.yaml
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/configs/hydra/job_logging/: full.yaml
