[tool.poetry]
name = "PROJECT_NAME"
version = "0.0.1"
description = ""
authors = ["AUTHOR"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
isort = "^4.3"

[tool.poetry.dev-dependencies]
pre-commit = "^1.20"
black = { version = "^19.10b0", python = "^3.6" }

[tool.black]
line-length = 90
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap=0
use_parentheses = true

line_length = 90
force_single_line = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
not_skip = "__init__.py"
filter_files = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
