[tool.poetry]
name = "[project_name]"
version = "0.1.0"
description = ""
authors = ["[authors]"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
pre-commit = "^1.20"
black = "^19.10b0"
pdbpp = "^0.10.2"
tldr = "^0.5"
isort = "^4.3"

[tool.black]
line-length = 90
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap=0
use_parentheses = true

line_length = 90
force_single_line = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
not_skip = "__init__.py"
filter_files = true
